fixing photo alignment

--- a/static/css/homeCss.css
+++ b/static/css/homeCss.css
@@ -7,15 +7,13 @@ body{
     background-repeat: no-repeat;
 }
 div.scrollmenu {
-    background-color: #333;
+    /* background-color: #333; */
+    /* background-color: wheat; */
     overflow: auto;
     white-space: nowrap;
   }
-div.scrollmenu a {
-    display: inline-block;
-    text-align: center;
-    padding: 14px;
-    text-decoration: none;
+div.scrollmenu > div {
+    margin-left:10px;
 }
 .modal{
     overflow:auto;
